Fixed a slight mis-styling in the actions-tab on Safari-only when using the Squeejee-theme.
This commit references issue #250.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@118 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -711,7 +711,8 @@ html>body #content {
 }
 
 /***** The actions tab *****/
-#main #leftmenu-squeejee #leftmenu #tab-content-actions-tab {
+#main #leftmenu-squeejee #leftmenu #tab-content-actions-tab a {
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
 }
 
 /***** The menus tab *****/
